; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/bzip2/extr_blocksort.c_mmed3.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/bzip2/extr_blocksort.c_mmed3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64)* @mmed3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mmed3(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp sgt i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i64, i64* %4, align 8
  store i64 %12, i64* %7, align 8
  %13 = load i64, i64* %5, align 8
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %7, align 8
  store i64 %14, i64* %5, align 8
  br label %15

15:                                               ; preds = %11, %3
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp sgt i64 %16, %17
  br i1 %18, label %19, label %27

19:                                               ; preds = %15
  %20 = load i64, i64* %6, align 8
  store i64 %20, i64* %5, align 8
  %21 = load i64, i64* %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = icmp sgt i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %19
  %25 = load i64, i64* %4, align 8
  store i64 %25, i64* %5, align 8
  br label %26

26:                                               ; preds = %24, %19
  br label %27

27:                                               ; preds = %26, %15
  %28 = load i64, i64* %5, align 8
  ret i64 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
